...
        }
        ToastUI(toastState)
    }
}

enum class Page(val title: String, val icon: ImageVector) {
    SIGNATURE_INFORMATION("签名信息", Icons.Rounded.Description),
    APK_INFORMATION("APK信息", Icons.Rounded.Android),
    APK_SIGNATURE("APK签名", Icons.Rounded.Pin),
    SIGNATURE_GENERATION("签名生成", Icons.Rounded.Key),
    SET_UP("设置", Icons.Rounded.Settings)
}

/**
 * 签名信息
 */
@Composable
...
